# python-genetic

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
genetic/: background_function.py  constants.py  eval_funcs.py  ga.py  genetic_algorithm.py  geneticalgorithm.py  main.py  particle.py
src/: background_fn.py  main.py
tests/unit/: conftest.py  test_genetic_algorithm.py
vis/: ErrorVis.py  PSOVisualization.py  ParticleVisualization.py  ScatterVisualizer.py  draw.py  visualization.py
