[tool.poetry]
name = "genetic"
authors =  ["Tobias Wenzel <atobiasw225@gmail.com>"]
description = "Fun implementation of genetic algorithm"
version = "0.0.1"
readme = "README.md"
packages = [{include = "genetic"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy ="1.26.4"
scipy = "1.13.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "8.1.1"
pytest-cov = "^5.0.0"

[tool.poetry.group.vis]
optional = true

[tool.poetry.group.vis.dependencies]
matplotlib = "3.9.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "3.7.1"

